More correct handling of requires transitive.